--- a/WebContent/css/detail.css
+++ b/WebContent/css/detail.css
@@ -22,7 +22,7 @@
 
 .info__title {
 	grid-column: 2/15;
-	font-size: 2.4rem;
+	font-size: 2.3rem;
 	padding: 0 0 .5em .01em;
 }
 
@@ -56,7 +56,7 @@
 	border-color: #c5c5c5;
 	border-right: none;
 	border-left: none; 
-	height: 20em;
+	min-height : 30em;
 	border-width: .05em;
 }
 
