--- a/WebContent/css/palette.css
+++ b/WebContent/css/palette.css
@@ -4,13 +4,17 @@
 }
 
 .list__img__palette img {
-	width: 20em;
+	width: 19em;
+}
+
+.list-head {
+	margin-bottom: .8em; 
 }
 
 .thumbnail__list__palette {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
-	padding: 7em 0 7em 0;
+	padding: 7em 0 5em 0;
 	justify-items: center;
 }
 
@@ -38,7 +42,7 @@
 
 .palette__write__button {
 	grid-column: 7/8;
-	margin-left: 1.4em;
+	margin-left: .9em;
 }
 
 #palette__write__submit {
