--- a/WebContent/css/login.css
+++ b/WebContent/css/login.css
@@ -1,75 +1,118 @@
-
 .grid__section__login {
-  background:white;
-  font-family: 'Heebo', sans-serif;
-  font-size: 10px;
-  margin-top: 13em;
+	background: white;
+	font-family: 'Heebo', sans-serif;
+	font-size: 10px;
+	margin-top: 10em;
 }
 
 form {
-  background: #fff;
-  padding: 5em 4em 2em;
-  max-width: 400px;
-  margin: 2em auto 0;
-  box-shadow: 0 0 0.5em rgb(218, 218, 218);
-  border-radius: 2px;
+	background: #fff;
+	padding: 5em 4em 2em;
+	max-width: 400px;
+	margin: 2em auto 0;
+	box-shadow: 0 0 0.5em rgb(218, 218, 218);
+	border-radius: 2px;
 }
 
 h2 {
-  margin: .5em 0 0 0;
-  text-align: center;
-  font-size: 2.2rem;
-  color: rgb(77, 77, 77);
+	margin: .5em 0 0 0;
+	text-align: center;
+	font-size: 2.2rem;
+	color: rgb(77, 77, 77);
 }
 
 p {
-  margin: 0 0 3em 0;
-  position: relative;
+	margin: 0 0 3em 0;
+	position: relative;
 }
 
 input {
-  display: block;
-  box-sizing: border-box;
-  width: 100%;
-  outline: none;
-  margin:0;
+	display: block;
+	box-sizing: border-box;
+	width: 100%;
+	outline: none;
+	margin: 0;
 }
 
-label{
-  color: rgba(0, 0, 0, 0.7);
-  font-size: 0.8rem;
-  display: block;
-  padding: 4px 0 0 0.5em;
-  font-weight: 600;
+.user__id,
+.user__password {
+	color: rgba(0, 0, 0, 0.7);
+	font-size: 0.8rem;
+	display: block;
+	padding: 4px 0 0 0.5em;
+	font-weight: 600;
 }
 
 #username, #password {
-  background: #fff;
-  border: 1px solid #dbdbdb;
-  font-size: 1.6em;
-  padding: .8em .5em;
-  border-radius: 2px;
-  border-top: 0;
-  border-left: 0;
-  border-right: 0;
-  opacity: 60%;
+	background: #fff;
+	border: 1px solid #dbdbdb;
+	font-size: 1.6em;
+	padding: .8em .5em;
+	border-radius: 2px;
+	border-top: 0;
+	border-left: 0;
+	border-right: 0;
+	opacity: 60%;
 }
 
 #submit {
-  border-radius: 2px;
-  border: none;
-  color: rgb(206, 171, 150);
-  cursor: pointer;
-  display: block;
-  font-size: 2em;
-  line-height: 1.6em;
-  margin: 2em 0 0;
-  outline: none;
-  padding: .8em 0;
+	border-radius: 2px;
+	border: none;
+	color: rgb(206, 171, 150);
+	cursor: pointer;
+	display: block;
+	font-size: 2em;
+	line-height: 1.6em;
+	margin: 2em 0 0;
+	outline: none;
+	padding: .8em 0;
 }
 
 #submit:hover {
-  background: rgb(206, 171, 150);
-  color: white;
+	background: rgb(206, 171, 150);
+	color: white;
 }
 
+label {
+	display : inline-block;
+	color: #808080;
+	font-size: 0.8rem;
+	font-weight: 600;
+}
+
+input[type="checkbox"] {
+	display: none;
+}
+
+input[type="checkbox"]+label span {
+	display: inline-block;
+	width: 24px;
+	height: 24px;
+	margin: -2px 10px 0 0;
+	vertical-align: middle;
+	background: url(/pantone/image/checkbox.svg) left top no-repeat;
+	cursor: pointer;
+	background-size: cover;
+}
+
+input[type="checkbox"]:checked+label span {
+	background: url(/pantone/image/checkbox.svg) -26px top no-repeat;
+	background-size: cover;
+}
+
+.login__signin__link {
+	display: inline-block;
+    font-size: .8rem;
+}
+
+.login__signin__link a {
+	text-decoration: none;
+    color:#808080;
+	margin-left: 19.3em;
+}
+
+@media ( max-width : 800px) {
+	.login__signin__link a {
+		margin-left: 18.7em;
+	}
+}
