--- a/WebContent/css/footer.css
+++ b/WebContent/css/footer.css
@@ -1,9 +1,9 @@
 footer {
     grid-column: 1/12;
     display: grid;
-    grid-template-columns: 3fr 2fr 4fr 3fr;
-    text-align: center;
-    justify-content: center;
+    grid-template-columns: 3.5fr 2fr 4fr 3fr;
+/*     text-align: center; */
+/*     justify-content: center; */
     align-items: center;
     padding: 1em 7em 1em 7em;
     background-color: rgb(86, 86, 92);
@@ -27,13 +27,14 @@ footer {
 .copy {
     grid-column: 3/4;
     text-align: left;
-    padding-left: 3em;
+    padding-left: 1em;
 }
 
 .footer__sns {
     display: grid;
     grid-template-columns: auto auto auto;
     justify-content: right;
+    margin-right: 1em;
 }
 
 .footer__sns a {
@@ -44,7 +45,7 @@ footer {
 .logo {
     width: 9em;
     padding-top: .3em;
-	margin-left: 1em;
+	margin-left: 1.9em;
 }
 
 footer a:visited {color: rgb(165, 165, 165);}
@@ -78,5 +79,6 @@ footer a:hover {opacity: 70%;}
         display: block;
         align-items: center;
         padding: 0.6em 0 1em 0;
+        margin: 0;
     }
 }
