--- a/WebContent/css/write.css
+++ b/WebContent/css/write.css
@@ -1,54 +1,58 @@
 .grid__section__write {
-	grid-column: 1/13;
+	grid-column: 1/12;
 	padding: 0;
 	font-family: 'Heebo', sans-serif;
 	font-size: 10px;
-	margin: 0em 0 0.6em 0;
+	margin: 0;
 	background-color: white;
 }
 
-.my__palette {
-	text-align: center;
-	font-size: 2rem;
-	color: #727272;
-	padding : 1.5em 0 1.5em 0;
-	background-color: #b0b6d0;
+.write__boardname {
+	grid-column : 1/10;
+	font-size: 1rem;
+	color: #2f2f2f;
+	padding: 2em 0 .7em 0; 
 }
 
 .write__form {
 	background: #fff;
 	max-width: 85%;
-	margin: 4em auto 8em;
+	margin: 4em 14em 8em;
 }
 
 .write__form__bar {
 	display: grid;
-	grid-template-columns: repeat(10, 1fr);
+	grid-template-columns: repeat(11, 1fr);
 	margin-bottom: 2em;
 }
 
 #title {
-	grid-column: 1/8;
+	grid-column: 1/9;
 	box-sizing: border-box;
 	outline: none;
 	font-size: 1.8em;
 	border-style: none none none solid;
 	border-color: #c0c0c0;
-	line-height: 1.8em;
 	color: gray;
-	border-width: .5em;
+	border-width: .2em;
+}
+
+.note-placeholder{
+	font-size: 1rem
 }
 
 #write__submit {
-	grid-column: 10/11;
+	grid-column: 10/12;
 	border-radius: 2px;
 	border: none;
-	color: rgb(206, 171, 150);
+	color: rgb(255, 255, 255);
+	background-color: #c0c0c0;
 	cursor: pointer;
 	font-size: 2em;
 	line-height: 1.6em;
 	padding: .2em;
-	width: 8em;
+	width: 6em;
+	justify-self: right; 
 }
 
 #write__submit:hover {
